msgq/k8s/rabbit-mq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-mq-deployement
spec:
  replicas: 1
  selector:
    matchLabels:
      component: rabbit-mq
  template:
    metadata:
      labels:
        component: rabbit-mq
    spec:
      containers:
        - name: rabbit-mq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
