msgq/k8s/rabbit-mq-admin-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-mq-admin-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: rabbit-mq
  ports:
    - port: 15672
      targetPort: 15672
