msgq/k8s/rabbit-mq-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-mq-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: rabbit-mq
  ports:
    - port: 5672
      targetPort: 5672
