msgq/k8s/worker-api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-api-cluser-ip-service
spec:
  type: ClusterIP
  selector:
    component: worker-api
  ports:
   - port: 8086
     targetPort: 8086
